# bitcoin-parser

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
btcnode/: docker-compose.yml
lib/: Cargo.toml
lib/src/: lib.rs  parser.rs  types.rs
lib/src/blkparser/: block.rs  cursor.rs  helpers.rs  mod.rs  transaction.rs
lib/src/blockchain/: block.rs  mod.rs  script.rs  serde_custom.rs  transactions.rs
lib/src/disk/: mod.rs
src/: cli.rs  clidef.yml  errors.rs  main.rs
src/cli/: interface.yml  mod.rs  ops.rs
src/logger/: Cargo.toml
