[workspace]
members = [
    "src/logger",
    "lib/"
]

[package]
name = "btparser"
version = "0.1.0"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btlib = {package = "bplib", path = "./lib", features = ["parser", "writer"]}
clap = {version = "2.33.3", features = ["yaml"]}
serde = "1.0"
serde_json = "1.0"
