[package]
name = "bplib"
version = "0.1.0"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parser = []
writer = ["serde", "hex"]
parallel = ["rayon"]

[dependencies]
byteorder = "1.3"
sha2 = "0.9"
arrayref = "0.3.6"
serde = {version = "1.0", features = ["derive"], optional = true}
hex = {version = "0.4.2", optional = true}
thiserror = "1.0"
rayon = {version = "1.4", optional = true}